--- a/src/style/responsivo.css
+++ b/src/style/responsivo.css
@@ -18,6 +18,10 @@
         display: block;
     }   
 
+    .cabecalho{
+        justify-self: center;
+    }
+    
     .secao-horizontal .cartao__imagem {
         height: 4.58rem;
     }
@@ -48,6 +52,7 @@
     .navbar {
         display: none;
     }
+
 
     .secao-horizontal .cartao__imagem {
         height: 73px;
