--- a/src/style/responsivo.css
+++ b/src/style/responsivo.css
@@ -21,13 +21,20 @@
     .cabecalho{
         justify-self: center;
     }
-    
+
+    .secao-horizontal .cartao {
+        display: grid;
+        grid-template-columns: auto 1fr auto;
+        grid-template-rows: auto 3rem 0.9rem;
+        column-gap: .5rem;
+    }
     .secao-horizontal .cartao__imagem {
         height: 4.58rem;
     }
  
     .secao-horizontal .cartao__titulo {
         font: 700 14px/20px Open Sans, sans-serif;
+        align-self: center;
     }
 
     .secao-vertical .cartao {
