--- a/src/style/grid/secao.css
+++ b/src/style/grid/secao.css
@@ -7,3 +7,9 @@
     grid-template-rows: 70px;
     row-gap: 2rem;
 }
+
+.secao-horizontal .secao__cartoes{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(min(80%/2, max(350px, 80%/3)),1fr));
+    gap: 1.25rem;
+}
